style.css
/* ... */
.secondary-articles .article-section {
	-webkit-box-ordinal-group: 2;
	-webkit-order: 1;
	-ms-flex-order: 1;
	order: 1;
	margin-top: .6rem;
}

.row.single .home-subtitle,
.column:hover .home-subtitle {
	display: block;
}

.home-subtitle {
	display: none;
}

.secondary-articles .home-subtitle {
	color: #2a3033;
	display: block;
	font-weight: 300;
	-webkit-box-ordinal-group: 4;
	-webkit-order: 3;
	-ms-flex-order: 3;
	order: 3;
}

/* Responsive adjustments */
@media screen and (max-width: 989px) {
	#binder main {
		margin-left: 0;
		margin-top: 0;
	}

}

@media screen and (max-width: 950px) {
	.home section.secondary-articles h2,
	.single-wsu_magazine_issue section.secondary-articles h2 {
		font-size: .9rem;
	}

}

@media screen and (max-width: 850px) {
	.site-header {
		-webkit-flex-flow: row wrap;
		-ms-flex-flow: row wrap;
		flex-flow: row wrap;
		height: auto;
	}

	.site-header-issue {
		-webkit-box-flex: 1;
		-webkit-flex: 1 100%;
		-ms-flex: 1 100%;
		flex: 1 100%;
		height: 40px;
	}

	.site-header-nav {
		width: calc(100% - (325px + 35px));
	}

	.secondary-articles .home-subtitle {
		line-height: 1.2;
		font-size: .8rem;
	}

	.article-body {
		padding: 0 2rem;
		box-sizing: border-box;
	}

}

@media screen and (max-width: 791px) {
	#binder.fluid main {
		margin-top: 0;
	}

	.home .halves .column,
	.single-wsu_magazine_issue .halves .column {
		padding: 0;
	}

}

@media screen and (max-width: 650px) {
	.home .site-header,
	.single-wsu_magazine_issue .site-header {
		background: none;
		position: relative;
	}

	.sh-item {
		-webkit-box-flex: 1;
		-webkit-flex: 1 100%;
		-ms-flex: 1 100%;
		flex: 1 100%;
	}

	.site-header-logo {
		position: relative;
		text-align: right;
		right: auto;
		bottom: auto;
		padding: 2rem;
	}

	.main-header .header-group {
		bottom: auto;
		max-width: 100%;
	}

	.social-share-bar {
		float: none;
	}

	.home section:first-child .one a > div,
	.single-wsu_magazine_issue section:first-child .one a > div {
		margin-top: -103px;
	}

	.page .single .column.one {
		box-sizing: border-box;
		padding-left: 1.5rem;
		padding-right: 1.5rem;
	}

	.home .single .column,
	.single-wsu_magazine_issue .single .column,
	.single-post .single .column {
		padding: 0;
	}

	.magazine-nav,
	.wsu-nav {
		-webkit-box-orient: vertical;
		-webkit-box-direction: normal;
		-webkit-flex-direction: column;
		-ms-flex-direction: column;
		flex-direction: column;
	}

	.magazine-nav a,
	.wsu-nav a {
		padding: .25rem;
	}

}

@media screen and (max-width: 382px) {
	.site-header-logo img {
    	width: auto;
    }
    .home section:first-child .one a > div,
    .single-wsu_magazine_issue section:first-child .one a > div {
    	margin-top: -94px;
    }
}
}

/* Old WSM styles to preserve in 2015 redesign */

/* Utility classes */
.bold {
	font-weight: bold;
}

.italic {
	font-style: italic;
}

.small {
	font-size: .9em;
	line-height: normal;
	padding: 2px 0 5px 0;
}

.extra-bold {
	font-weight: bolder;
}

.larger {
	font-size: larger;
}

.uppercase {
	text-transform: uppercase;
}

.smallcaps {
	font-variant: small-caps;
}

.indent {
	margin: 0 50px;
}

.right {
	float: right;
}

.left {
	float: left;
}

.crimson-border {
	border: 1px solid #9b2437;
	padding: 10px;
}

.middle {
	vertical-align: middle;
}

.small-box {
	margin: 0 10px 10px 10px;
	max-width: 250px;
}

.small-box img {
	max-width: 100%;
}

.image340 {
	max-width: 340px;
	height: auto;
}

/* Colors */
.color1,
.red {
	color: #c60c30;
}

.color2,
.crimson {
	color: #9b2437;
}

.color3,
.wsm-gray {
	color: #667178;
}

.color4,
.light-gray {
	color: #798389;
}

.color5,
.lighter-gray {
	color: #aab1b4;
}

.dark-gray {
	color: #1d2124;
}

.color6,
.green {
	color: #bfc720;
}

.color7,
.yellow {
	color: #fec34e;
}

.color8,
.winter-blue {
	color: #194f78;
}

.color9,
.winter-blue-light {
	color: #5f96bf;
}

.color10,
.beige {
	color: #e4dac1;
}

.color11,
.aqua {
	color: #3cb6ce;
}

.color12,
.orange {
	color: #ef9234;
}

.color13,
.teal {
	color: #066f68;
}

.color14,
.warm-gray-light {
	color: #65645c;
}

.color15,
.warm-gray-medium {
	color: #262b2d;
}

.color17,
.color16,
.warm-gray-dark {
	color: #505353;
}

.color18,
.warm-gray-darkest {
	color: #464845;
}

.color19,
.white {
	color: #FFF;
}

.color20,
.black {
	color: #000;
}

.fall,
.Fall {
	color: #EF9234;
}

.winter {
	color: #194F78;
}

.winter-light,
.Winter {
	color: #5F96BF;
}

.spring,
.Spring {
	color: #BFC720;
}

.summer,
.Summer {
	color: #FEC34E;
}

.fall-bg {
	background: #ea8d2f;
}

.winter-bg {
	background: #194F78;
}

.spring-bg {
	background: #b4bb25;
}

.summer-bg {
	background: #e9ac3b;
}

/* Inline text styles */
.section-head {
	text-transform: uppercase;
	font-weight: bold;
	color: #9b2437;
}

.space-line-above {
	margin-top: 10px;
}

.space-line-below {
	margin-bottom: 10px;
}

.top-space {
	margin-top: 5px;
}

.bottom-space {
	margin-bottom: 5px;
}

.size-lt-medium img.size-medium.alignleft,
.size-lt-medium img.size-medium.alignright,
.size-lt-medium img.size-large.alignleft,
.size-lt-medium img.size-large.alignright {
	width: auto;
	height: auto;
	clear: none;
	float: none;
	margin: 0 1rem 0 0;
}

